le doy estilos a las canciones

--- a/clase02/articulo-completo.html
+++ b/clase02/articulo-completo.html
@@ -22,14 +22,34 @@
   <link rel="shortcut icon" href="https://img.icons8.com/ios/50/000000/laptop-coding.png" type="image/x-icon">
   <!-- CSS GENERAL-->
   <link rel="stylesheet" href="../styles/main.css">
+  <!-- CSS ARTICULO -->
+  <link rel="stylesheet" href="../styles/articulo.css">
 </head>
 <body>
   <!-- HEADER-->
   <header>
     <h1>Bienvenida a mis Articulo</h1>
   </header>
+  <nav>
+    <ul>
+      <li><a href="#html">HTML5</a></li>
+      <li><a href="#css">CSS3</a></li>
+      <li><a href="#javascript">JAVASCRIPT</a></li>
+    </ul>
+  </nav>
   <!-- MAIN -->
   <main>
+    <section id="html">
+      <h2>HTML5</h2>
+
+    </section>
+    <section id="css">
+      <h2>CSS3</h2>
+
+    </section>
+    <section id="javascript">
+      <h2>JAVASCRIPT</h2>
+    </section>
 
   </main>
 
