--- a/clase02/canciones-bautiful-day.html
+++ b/clase02/canciones-bautiful-day.html
@@ -22,6 +22,8 @@
   <link rel="shortcut icon" href="https://img.icons8.com/material/24/fa314a/photos-folder--v1.png" type="image/x-icon">
   <!-- CSS GENERAL-->
   <link rel="stylesheet" href="../styles/main.css">
+  <!-- CSS CANCIONES -->
+  <link rel="stylesheet" href="../styles/canciones.css">
 </head>
 <body>
   <!-- HEADER-->
