estilo el texto del articulo

--- a/clase02/articulo-completo.html
+++ b/clase02/articulo-completo.html
@@ -23,7 +23,7 @@
   <!-- CSS GENERAL-->
   <link rel="stylesheet" href="../styles/main.css">
   <!-- CSS ARTICULO -->
-  <link rel="stylesheet" href="../styles/articulo.css">
+  <link rel="stylesheet" href="../styles/articulo-completo.css">
 </head>
 <body>
   <!-- HEADER-->
@@ -39,16 +39,57 @@
   </nav>
   <!-- MAIN -->
   <main>
+    <!-- HTML-->
     <section id="html">
       <h2>HTML5</h2>
-
+      <img src="https://img.icons8.com/color/96/undefined/html-5--v1.png"/>
+      <h3>Temas a ver:</h3>
+      <ul>
+        <li>etiquetas semanticas</li>
+        <li>formularios</li>
+        <li>graficos</li>
+        <li>media</li>
+        <li>APIs</li>
+      </ul>
     </section>
+    <!-- CSS -->
     <section id="css">
       <h2>CSS3</h2>
-
+      <img src="https://img.icons8.com/color/96/undefined/css3.png"/>
+      <h3>Temas a ver:</h3>
+      <ol>
+        <li>CSS Basico</li>
+        <li>CSS Avanzado</li>
+        <li>CSS Responsive</li>
+        <li>CSS Grid</li>
+      </ol>
     </section>
+    <!-- JAVASCRIPT-->
     <section id="javascript">
       <h2>JAVASCRIPT</h2>
+      <img src="https://img.icons8.com/color/96/undefined/javascript--v1.png"/>
+      <h3>Temas a ver:</h3>
+      <ol>
+        <li>JavaScript Basico</li>
+        <li>JavaScript Objetos</li>
+        <li>JavaScript Funciones</li>
+        <li>JavaScript Clases</li>
+        <li>JavaScript Async</li>
+        <li>JavaScript HTML DOM</li>
+        <li>JavaScript Web APIs</li>
+        <li>JavaScript AJAX</li>
+        <li>JavaScript JSON</li>
+      </ol>
+    </section>
+    <!--COMENTARIOS-->
+    <section class="comentarios">
+      <h2>Comentarios</h2>
+      <h3>@FrontEndLover</h3>
+      <p>Muy bueno el contenido🎉</p>
+      <h3>@AmanteDelDiseño</h3>
+      <p>Todo muy actualizado❤</p>
+      <h3>@Programando</h3>
+      <p>Me ayudo mucho👌</p>
     </section>
 
   </main>
