--- a/clase02/articulo.html
+++ b/clase02/articulo.html
@@ -22,6 +22,8 @@
   <link rel="shortcut icon" href="https://img.icons8.com/ios/50/000000/laptop-coding.png" type="image/x-icon">
   <!-- CSS GENERAL-->
   <link rel="stylesheet" href="../styles/main.css">
+  <!-- CSS ARTICULO -->
+  <link rel="stylesheet" href="../styles/articulo.css">
 </head>
 <body>
   <!-- HEADER-->
@@ -30,7 +32,21 @@
   </header>
   <!-- MAIN -->
   <main>
-
+    <p class="gray">Publicado por <a href="#" class="light-blue">@adalovelace</a> hace 3 días.</p>
+    <p>
+      <i>Bienvenidos a todos!</i>
+    </p>
+    <p>
+      <bold>Agradecida de que me lean.</bold>
+    </p>
+    <p class="parrafo-distinto">
+      <i>¿De què quieren leer en mi próximo entículo?</i>
+    </p>
+    <p>
+      <strong><i>1.</i> ¿Cómo buscar el primer trabajo en IT ?</strong>
+      <br>
+      <strong><i>2.</i>¿Cómo prepararnos para las entrevistas laborales?</strong>
+    </p>
   </main>
 
   <footer>
