--- a/clase02/index.html
+++ b/clase02/index.html
@@ -66,7 +66,7 @@
     </section>
     <!-- ARTICULO COMPLETO -->
     <section id="articulo-completo">
-      <a href="./peliculas.html" target="_blank" rel="noopener noreferrer">Articulo Completo</a>
+      <a href="./articulo-completo.html" target="_blank" rel="noopener noreferrer">Articulo Completo</a>
     </section>
     <!-- PRESENTACION -->
     <section id="presentacion">
@@ -78,7 +78,7 @@
     </section>
     <!-- ARTICULO-->
     <section id="articulo">
-      <a href="./aarticulo.html" target="_blank" rel="noopener noreferrer">Articulo</a>
+      <a href="./articulo.html" target="_blank" rel="noopener noreferrer">Articulo</a>
     </section>
     <!-- PAISAJE-->
     <section id="paisaje">
