--- a/clase02/presentacion.html
+++ b/clase02/presentacion.html
@@ -22,6 +22,8 @@
   <link rel="shortcut icon" href="https://img.icons8.com/ios/50/000000/laptop-coding.png" type="image/x-icon">
   <!-- CSS GENERAL-->
   <link rel="stylesheet" href="../styles/main.css">
+  <!-- CSS PRESENTACION -->
+  <link rel="stylesheet" href="../styles/presentacion.css">
 </head>
 <body>
   <!-- HEADER-->
@@ -30,9 +32,11 @@
   </header>
   <!-- MAIN -->
   <main>
+    <section class="presentacion">
+      <p><span class="programadora">Programadora</span> Front End, estudiando React y Node para ser Full Stack. En mis ratos libres ademá de codear me gusta <span class="cocinar">cocinar</span> y hacer <span class="pilates">pilates</span>.</p>
+    </section>
 
   </main>
-
   <footer>
     <p>Practica realizada por <a href="http://www.linkedin.com/in/maríaeugeniacosta" target="_blank" rel="noopener noreferrer">María Eugenia Costa</a> para el curso <strong>Introduccion Front End</strong> en <img src="../assets/images/ada_logo_blanco.png" alt="Logo de Ada"></p>
   </footer>
