hice la practica de paisaje

--- a/clase02/paisaje.html
+++ b/clase02/paisaje.html
@@ -30,9 +30,17 @@
   </header>
   <!-- MAIN -->
   <main>
-
+    <span class="font-1">🌲</span>
+    <span class="font-2">🌳</span>
+    <span class="font-3">🏠</span>
+    <span class="font-1">🌳</span>
+    <span class="font-2">🏢</span>
+    <span class="font-3">🏦</span>
+    <span class="font-1">🏠</span>
+    <span class="font-2">🌳</span>
+    <span class="font-3">🏢</span>
+    <span class="font-1">🏠</span>
   </main>
-
   <footer>
     <p>Practica realizada por <a href="http://www.linkedin.com/in/maríaeugeniacosta" target="_blank" rel="noopener noreferrer">María Eugenia Costa</a> para el curso <strong>Introduccion Front End</strong> en <img src="../assets/images/ada_logo_blanco.png" alt="Logo de Ada"></p>
   </footer>
