agrego al practica de alineacion

--- a/clase02/alineacion.html
+++ b/clase02/alineacion.html
@@ -26,11 +26,19 @@
 <body>
   <!-- HEADER-->
   <header>
-    <h1>Hola soy María Eugenia Costa!</h1>
+    <h1>Práctica de alineación</h1>
   </header>
   <!-- MAIN -->
   <main>
-
+    <p class="left">¡Izquierda!</p>
+    <p class="center">¡Centro!</p>
+    <p class="right">¡Derecha!</p>
+    <p class="left">¡Izquierda!</p>
+    <p class="center">¡Centro!</p>
+    <p class="center">¡Centro!</p>
+    <p class="left">¡Izquierda!</p>
+    <p class="right">¡Derecha!</p>
+    <p class="right">¡Derecha!</p>
   </main>
 
   <footer>
