agrego la practica de las frutas

--- a/clase02/frutas.html
+++ b/clase02/frutas.html
@@ -19,7 +19,7 @@
   <meta property="og:url" name="twitter:url"
     content="https://eugenia1984.github.io/ada-introduccion-frontend/clase02/frutas.html">
   <!-- FAVICON -->
-  <link rel="shortcut icon" href="https://img.icons8.com/ios/50/000000/laptop-coding.png" type="image/x-icon">
+  <link rel="shortcut icon" href="https://img.icons8.com/fluency/48/undefined/group-of-fruits.png" type="image/x-icon">
   <!-- CSS GENERAL-->
   <link rel="stylesheet" href="../styles/main.css">
 </head>
@@ -29,8 +29,20 @@
     <h1>Frutas</h1>
   </header>
   <!-- MAIN -->
-  <main>
-
+  <main class="frutas">
+    <h2>Frutas para comprar:</h2>
+    <ul>
+      <li class="manzana">manzana</li>
+      <li class="banana">banana</li>
+      <li class="kiwi">kiwi</li>
+      <li class="naranja">naranja</li>
+      <li class="frutilla">frutilla</li>
+      <li class="uva">uva</li>
+      <li class="pomelo">pomelo</li>
+      <li class="cereza">cereza</li>
+      <li class="pera">pera</li>
+      <li class="maracuja">maracuja</li>
+    </ul>
   </main>
 
   <footer>
