agrego la practica de la paleta de colores

--- a/clase02/paleta-de-colores.html
+++ b/clase02/paleta-de-colores.html
@@ -15,11 +15,11 @@
   <meta property="og:description" name="twitter:description"
     content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la segunda clase, en este caso mi paleta de colores.">
   <meta property="og:image" name="twitter:image"
-    content="https://img.icons8.com/ios/50/000000/laptop-coding.png">
+    content="https://img.icons8.com/color/48/undefined/color-palette.png">
   <meta property="og:url" name="twitter:url"
     content="https://eugenia1984.github.io/ada-introduccion-frontend/clase02/paleta-de-colores.html">
   <!-- FAVICON -->
-  <link rel="shortcut icon" href="https://img.icons8.com/ios/50/000000/laptop-coding.png" type="image/x-icon">
+  <link rel="shortcut icon" href="https://img.icons8.com/color/48/undefined/color-palette.png" type="image/x-icon">
   <!-- CSS GENERAL-->
   <link rel="stylesheet" href="../styles/main.css">
 </head>
@@ -29,8 +29,37 @@
     <h1>Mis paletas</h1>
   </header>
   <!-- MAIN -->
-  <main>
-
+  <main class="paletas">
+    <section class="paleta1">
+      <h2>Modern</h2>
+      <ul>
+        <li class="f9f8fc">#f9f8fc</li>
+        <li class="d94de7">#d94de7</li>
+        <li class="fec7d7">#fec7d7</li>
+        <li class="b8546f0">#8546f0</li>
+        <li class="b0e172c">#0e172c</li>
+      </ul>
+    </section>
+    <section class="paleta2">
+      <h2>Eco</h2>
+      <ul>
+        <li class="eff0f3">rgb(239, 240, 243)</li>
+        <li class="abd1c6">rgb(171, 209, 198)</li>
+        <li class="f9bc60">rgb(249, 188, 96)</li>
+        <li class="e16162">rgb(225, 97, 98)</li>
+        <li class="b004643">rgb(0, 70, 67)</li>
+      </ul>
+    </section>
+    <section class="paleta3">
+      <h2>Education</h2>
+      <ul>
+        <li class="fef6e4">hsl(42, 93%, 95%)</li>
+        <li class="f3d2c1">hsl(20, 68%, 85%)</li>
+        <li class="b8bd3dd">hsl(187, 55%, 71%)</li>
+        <li class="f582ae">hsl(337, 85%, 74%)</li>
+        <li class="b001858">hsl(224, 100%, 17%)</li>
+      </ul>
+    </section>
   </main>
 
   <footer>
