hago el ejerciccio dle termometro

--- a/clase02/termometro.html
+++ b/clase02/termometro.html
@@ -15,11 +15,11 @@
   <meta property="og:description" name="twitter:description"
     content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la segunda clase, en este caso iun termometro.">
   <meta property="og:image" name="twitter:image"
-    content="https://img.icons8.com/ios/50/000000/laptop-coding.png">
+    content="https://img.icons8.com/color/48/undefined/temperature--v1.pngg">
   <meta property="og:url" name="twitter:url"
     content="https://eugenia1984.github.io/ada-introduccion-frontend/clase02/termometro.html">
   <!-- FAVICON -->
-  <link rel="shortcut icon" href="https://img.icons8.com/ios/50/000000/laptop-coding.png" type="image/x-icon">
+  <link rel="shortcut icon" href="https://img.icons8.com/color/48/undefined/temperature--v1.png" type="image/x-icon">
   <!-- CSS GENERAL-->
   <link rel="stylesheet" href="../styles/main.css">
 </head>
@@ -29,8 +29,20 @@
     <h1>Termometro</h1>
   </header>
   <!-- MAIN -->
-  <main>
-
+  <main class="termometro">
+    <ul>
+      <li class="c50">50°C</li>
+      <li class="c45">45°C</li>
+      <li class="c40">40°C</li>
+      <li class="c35">35°C</li>
+      <li class="c30">30°C</li>
+      <li class="c25">25°C</li>
+      <li class="c20">20°C</li>
+      <li class="c15">15°C</li>
+      <li class="c10">10°C</li>
+      <li class="c5">5°C</li>
+      <li class="c0">0°C</li>
+    </ul>
   </main>
 
   <footer>
