agrego el ejercicio de frutas de la clase 3

--- a/clase03/index.html
+++ b/clase03/index.html
@@ -15,7 +15,7 @@
     </header>
   <!-- MAIN -->
   <main>
-
+    <p><a href="./verduleria.html">verduleria</a></p>
   </main>
   <!-- FOOTER -->
   <footer>
