comienzo con la practica de la clase 3

--- a/clase03/habilidades.html
+++ b/clase03/habilidades.html
@@ -4,32 +4,31 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Clase 3 | Notificacion</title>
+  <title>Clase 3 | Habilidades</title>
   <meta name="description"
-  content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la tercer clase: notificacion">
+  content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la tercer clase:habilidades">
   <link rel="apple-touch-icon" href="https://img.icons8.com/external-becris-lineal-color-becris/64/000000/external-programming-data-science-becris-lineal-color-becris.png">
   <meta name="theme-color" content="rgb(232, 229, 132)">
   <meta name="twitter:card" content="summary">
   <meta property="og:type" content="website">
-  <meta property="og:title" name="twitter:title" content="Clase3 | Notificacion">
+  <meta property="og:title" name="twitter:title" content="Clase 3 | Habilidades">
   <meta property="og:description" name="twitter:description"
-    content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la tercer clase.">
+    content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la tercer clase: habilidades.">
   <meta property="og:image" name="twitter:image"
     content="https://img.icons8.com/ios/50/000000/laptop-coding.png">
   <meta property="og:url" name="twitter:url"
-    content="https://eugenia1984.github.io/ada-introduccion-frontend/clase03/index.html">
+    content="https://eugenia1984.github.io/ada-introduccion-frontend/clase03/habilidades.html">
   <!-- CSS GENERAL -->
   <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
   <!-- HEADER -->
     <header class="header">
-      <h1>Bienvenidos a mis practicas</h1>
+      <h1>Habilidades</h1>
     </header>
   <!-- MAIN -->
   <main>
-    <p><a href="./notificacion.html">notificacion</a></p>
-    <p><a href="./verduleria.html">verduleria</a></p>
+
   </main>
   <!-- FOOTER -->
   <footer>
