--- a/clase03/index.html
+++ b/clase03/index.html
@@ -28,8 +28,16 @@
     </header>
   <!-- MAIN -->
   <main>
-    <p><a href="./notificacion.html">notificacion</a></p>
-    <p><a href="./verduleria.html">verduleria</a></p>
+    <p><a href="./notificacion.html">Notificacion</a></p>
+    <p><a href="./verduleria.html">Verduleria</a></p>
+    <p><a href="./banderas.html">Banderas</a></p>
+    <p><a href="./barras-de-progreso.html">Barras de progreso</a></p>
+    <p><a href="./habilidades.html">Habilidades</a></p>
+    <p><a href="./donacion.html">Donacion</a></p>
+    <p><a href="./tareas.html">Tareas</a></p>
+    <p><a href="./proteccion-de-cuenta.html">Protección de cuenta</a></p>
+    <p><a href="./eventos.html">Eventos</a></p>
+    <p><a href="./banderas.html">Card de Producto</a></p>
   </main>
   <!-- FOOTER -->
   <footer>
