comienzo con la practica de la clase 3

--- a/clase03/notificacion.html
+++ b/clase03/notificacion.html
@@ -19,17 +19,16 @@
   <meta property="og:url" name="twitter:url"
     content="https://eugenia1984.github.io/ada-introduccion-frontend/clase03/index.html">
   <!-- CSS GENERAL -->
-  <link rel="stylesheet" href="./styles/main.css">
+  <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
   <!-- HEADER -->
     <header class="header">
-      <h1>Bienvenidos a mis practicas</h1>
+      <h1>Notificacion</h1>
     </header>
   <!-- MAIN -->
   <main>
-    <p><a href="./notificacion.html">notificacion</a></p>
-    <p><a href="./verduleria.html">verduleria</a></p>
+
   </main>
   <!-- FOOTER -->
   <footer>
