--- a/clase03/verduleria.html
+++ b/clase03/verduleria.html
@@ -26,6 +26,10 @@
   <link rel="stylesheet" href="../styles/verduleria.css">
 </head>
 <body>
+   <!-- HEADER -->
+   <header class="header">
+    <h1>Bienvenidos a mis practicas</h1>
+  </header>
   <!-- MAIN -->
   <div class="container">
     <h2 class="container-title">Verduleria</h2>
