comienzo con la practica de la clase 3

--- a/clase03/banderas.html
+++ b/clase03/banderas.html
@@ -19,15 +19,61 @@
   <meta property="og:url" name="twitter:url"
     content="https://eugenia1984.github.io/ada-introduccion-frontend/clase03/banderas.html">
   <!-- CSS GENERAL -->
-  <link rel="stylesheet" href="./styles/main.css">
+  <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
   <!-- HEADER -->
     <header class="header">
       <h1>Banderas</h1>
     </header>
+
   <!-- MAIN -->
-  <main>
+  <main id="clase3-banderas">
+    <!-- BANDERA -->
+    <section class="bandera">
+      <h2>Argentina</h2>
+      <section class="bandera-argentina">
+        <div class="franja-celeste"></div>
+        <div class="franja-blanca"></div>
+        <div class="franja-celeste"></div>
+      </section>
+    </section>
+     <!-- BANDERA -->
+    <section class="bandera">
+      <h2>Mexico</h2>
+      <section class="bandera-mexico">
+        <div class="franja-verde"></div>
+        <div class="franja-blanca"></div>
+        <div class="franja-roja"></div>        
+      </section>
+
+    </section>
+     <!-- BANDERA -->
+    <section class="bandera">
+      <h2>Francia</h2>
+      <section class="bandera-francia">
+        <div class="franja-azul"></div>
+        <div class="franja-blanca"></div>
+        <div class="franja-roja"></div>
+      </section>
+    </section>
+     <!-- BANDERA -->
+    <section class="bandera">
+      <h2>Alemania</h2>
+      <section class="bandera-alemania">
+        <div class="franja-negra"></div>
+        <div class="franja-roja"></div>
+        <div class="franja-amarilla"></div>
+      </section>
+    </section>
+     <!-- BANDERA -->
+    <section class="bandera">
+
+    </section>
+     <!-- BANDERA -->
+    <section class="bandera">
+
+    </section>
 
   </main>
   <!-- FOOTER -->
