--- a/clase03/index.html
+++ b/clase03/index.html
@@ -23,21 +23,22 @@
 </head>
 <body>
   <!-- HEADER -->
-    <header class="header">
+    <header class="header header-clase3">
       <h1>Bienvenidos a mis practicas</h1>
+      <h2>Haciendo click en cada boton podrás verlas 👀</h2>
     </header>
   <!-- MAIN -->
-  <main>
+  <main id="clase3">
     <p><a href="./notificacion.html">Notificacion</a></p>
     <p><a href="./verduleria.html">Verduleria</a></p>
     <p><a href="./banderas.html">Banderas</a></p>
-    <p><a href="./barras-de-progreso.html">Barras de progreso</a></p>
+    <p><a href="./barras-de-progeso.html">Barras de progreso</a></p>
     <p><a href="./habilidades.html">Habilidades</a></p>
     <p><a href="./donacion.html">Donacion</a></p>
     <p><a href="./tareas.html">Tareas</a></p>
     <p><a href="./proteccion-de-cuenta.html">Protección de cuenta</a></p>
     <p><a href="./eventos.html">Eventos</a></p>
-    <p><a href="./banderas.html">Card de Producto</a></p>
+    <p><a href="./card-de-productos.html">Card de Producto</a></p>
   </main>
   <!-- FOOTER -->
   <footer>
