--- a/clase03/proteccion-de-cuenta.html
+++ b/clase03/proteccion-de-cuenta.html
@@ -19,7 +19,7 @@
   <meta property="og:url" name="twitter:url"
     content="https://eugenia1984.github.io/ada-introduccion-frontend/clase03/proteccion-de-cuenta.html">
   <!-- CSS GENERAL -->
-  <link rel="stylesheet" href="./styles/main.css">
+  <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
   <!-- HEADER -->
