agrego la bandera de japon

--- a/clase03/banderas.html
+++ b/clase03/banderas.html
@@ -68,10 +68,19 @@
     </section>
      <!-- BANDERA -->
     <section class="bandera">
+      <h2>Indonesia</h2>
+      <section class="bandera-indonesia">
+        <div class="franja-roja"></div>
+        <div class="franja-blanca"></div>
+      </section>
 
     </section>
      <!-- BANDERA -->
     <section class="bandera">
+      <h2>Japon</h2>
+      <section class="bandera-japon">
+        <div class="circulo-rojo"></div>
+      </section>
 
     </section>
 
