--- a/clase03/verduleria.html
+++ b/clase03/verduleria.html
@@ -46,7 +46,7 @@
     </div>
   </div>
   <!-- FOOTER -->
-  <footer>
+  <footer class="footer-verduleria">
     <p>Practica realizada por <a href="http://www.linkedin.com/in/maríaeugeniacosta" target="_blank" rel="noopener noreferrer">María Eugenia Costa</a> para el curso <strong>Introduccion Front End</strong> en <img src="../assets/images/ada_logo_blanco.png" alt="Logo de Ada"></p>
   </footer>
   
