agrego la practica de barras de progreso, pero me falta ver p orque no se ve el progreso

--- a/clase03/barras-de-progeso.html
+++ b/clase03/barras-de-progeso.html
@@ -27,9 +27,30 @@
       <h1>Barras de progreso</h1>
     </header>
   <!-- MAIN -->
-  <main>
-
+  <main id="barras-de-progreso">
+    <div class="barra">
+      <div class="barra-10"></div>
+    </div>
+    <div class="barra">
+      <div class="barra-25"></div>
+    </div>
+    <div class="barra">
+      <div class="barra-50"></div>
+    </div>
+    <div class="barra">
+      <div class="barra-75"></div>
+    </div>
+    <div class="barra">
+      <div class="barra-90"></div>
+    </div>
   </main>
+  <!--
+    https://ck9cu.csb.app/)
+
+- Poner los siguientes progresos en cada barra: 10%, 25%, 50%, 75%, 90%
+- Agregale tanto a la barra contenedora como a la de progreso un `border-radius` de `100px`
+- Agregarle a la barra contenedora un `padding` de `3px`
+   -->
   <!-- FOOTER -->
   <footer>
     <p>Practica realizada por <a href="http://www.linkedin.com/in/maríaeugeniacosta" target="_blank" rel="noopener noreferrer">María Eugenia Costa</a> para el curso <strong>Introduccion Front End</strong> en <img src="../assets/images/ada_logo_blanco.png" alt="Logo de Ada"></p>
