empiezo con la practica de donacion

--- a/clase03/donacion.html
+++ b/clase03/donacion.html
@@ -27,8 +27,21 @@
       <h1>Donacion</h1>
     </header>
   <!-- MAIN -->
-  <main>
-
+  <main id="donacion">
+    <section class="donacion-card">
+      <section class="donacion-texto">
+        <p>Donate to help keep the internet free and open!</p>
+      </section>
+      <section class="donacion-importe">
+        <button class="btn-importe">$5</button>
+        <button class="btn-importe">$10</button>
+        <button class="btn-importe">$15</button>
+        <button class="btn-importe">$Other</button>
+      </section>
+      <section class="donacion-continue">
+        <button class="btn-continue">Continue</button>
+      </section>
+    </section>
   </main>
   <!-- FOOTER -->
   <footer>
