agrego la practica de la clase 3 con habilidades

--- a/clase03/habilidades.html
+++ b/clase03/habilidades.html
@@ -27,8 +27,25 @@
       <h1>Habilidades</h1>
     </header>
   <!-- MAIN -->
-  <main>
-
+  <main class="habilidades">
+    <section class="habilidades-card">
+      <section class="row1">
+        <h2>Learn New Skills</h2>
+        <button>View All</button>
+      </section>
+      <section class="row2">
+        <h3>User Interface Visual Design</h3>
+        <p>26 Courses</p>
+      </section>
+      <section class="row3">
+        <h3>Front End Development</h3>
+        <p>14 Courses</p>
+      </section>
+      <section class="row4">
+        <h3>Infraestructura and DevOps</h2>
+        <p>12 Courses</p>
+      </section>
+    </section>
   </main>
   <!-- FOOTER -->
   <footer>
