practica de tareas

--- a/clase03/tareas.html
+++ b/clase03/tareas.html
@@ -27,8 +27,15 @@
       <h1>Tareas</h1>
     </header>
   <!-- MAIN -->
-  <main>
-
+  <main class="tareas">
+    <h2>Web Development</h2>
+    <section class="card">
+      <h3>Completed Task</h3>
+      <p class="texto">Clear email inbox</p>
+      <p class="texto">Finalise requirements for client web design</p>
+      <p class="texto">Begin work on mock-up for client website</p>
+      <p class="texto-bloqueado">Add a card...</p>
+    </section>
   </main>
   <!-- FOOTER -->
   <footer>
