sigo con las practicas de la clase 3

--- a/clase03/index.html
+++ b/clase03/index.html
@@ -29,16 +29,16 @@
     </header>
   <!-- MAIN -->
   <main id="clase3">
-    <p><a href="./notificacion.html">Notificacion</a></p>
-    <p><a href="./verduleria.html">Verduleria</a></p>
-    <p><a href="./banderas.html">Banderas</a></p>
-    <p><a href="./barras-de-progeso.html">Barras de progreso</a></p>
-    <p><a href="./habilidades.html">Habilidades</a></p>
-    <p><a href="./donacion.html">Donacion</a></p>
-    <p><a href="./tareas.html">Tareas</a></p>
-    <p><a href="./proteccion-de-cuenta.html">Protección de cuenta</a></p>
-    <p><a href="./eventos.html">Eventos</a></p>
-    <p><a href="./card-de-productos.html">Card de Producto</a></p>
+    <p><a href="./notificacion.html" target="_blank" rel="noopener noreferrer">Notificacion</a></p>
+    <p><a href="./verduleria.html" target="_blank" rel="noopener noreferrer">Verduleria</a></p>
+    <p><a href="./banderas.html" target="_blank" rel="noopener noreferrer">Banderas</a></p>
+    <p><a href="./barras-de-progeso.html" target="_blank" rel="noopener noreferrer">Barras de progreso</a></p>
+    <p><a href="./habilidades.html" target="_blank" rel="noopener noreferrer">Habilidades</a></p>
+    <p><a href="./donacion.html" target="_blank" rel="noopener noreferrer">Donacion</a></p>
+    <p><a href="./tareas.html" target="_blank" rel="noopener noreferrer">Tareas</a></p>
+    <p><a href="./proteccion-de-cuenta.html" target="_blank" rel="noopener noreferrer">Protección de cuenta</a></p>
+    <p><a href="./eventos.html" target="_blank" rel="noopener noreferrer">Eventos</a></p>
+    <p><a href="./card-de-productos.html" target="_blank" rel="noopener noreferrer">Card de Producto</a></p>
   </main>
   <!-- FOOTER -->
   <footer>
