completo con los temas vistos en las demas clases

--- a/clase03/proteccion-de-cuenta.html
+++ b/clase03/proteccion-de-cuenta.html
@@ -27,8 +27,35 @@
       <h1>Proteccion de cuenta</h1>
     </header>
   <!-- MAIN -->
-  <main>
-
+  <main class="proteccion-cuenta">
+    <section class="card">
+      <div class="row-1">
+        <img src="../assets/images/proteccion.jpg" alt="dibujo de un escudo protector" width="111" height="116">
+      </div>
+      <div class="row-2">
+        <h2>Protect your account</h2>
+      </div>
+      <div class="row-3">
+        <h4>email@address.com</h4>
+      </div>
+      <div class="row-4">
+        <p>We use your this email address if you get locked out of your account or if we notice suspicous activity.</p>
+      </div>
+      <div class="row-5">
+        <div class="row-5-1">
+          <h2>Recovery email</h2>
+        </div>
+        <div class="row-5-2">
+          <p>rec-email@address.com</p>
+        </div>
+        <div class="row-5-3">
+          <button>Update</button>
+        </div>
+      </div>
+      <div class="row-6">
+        <button class="row6-confirm">Confirm</button>
+      </div>
+    </section>
   </main>
   <!-- FOOTER -->
   <footer>
