--- a/clase03/notificacion.html
+++ b/clase03/notificacion.html
@@ -27,13 +27,26 @@
       <h1>Notificacion</h1>
     </header>
   <!-- MAIN -->
-  <main>
-
+  <main id="notificacion">
+    <section class="container">
+      <section class="campana">
+        <img src="../assets/images/notification.png" alt="imagen de campana de notificacion" width="111" height="116">
+      </section>
+      <section class="titulo">
+        <h2>Notifications</h2>
+      </section>
+      <section class="text">
+        <p>The place where you receive notifications when someone answers on of your questions or comments on one of your posts.</p>
+        <p>To get started <a href="#">log in</a> or</p>
+      </section>
+      <section class="boton">
+        <button>Sign up</button>
+      </section>
+    </section>
   </main>
   <!-- FOOTER -->
   <footer>
     <p>Practica realizada por <a href="http://www.linkedin.com/in/maríaeugeniacosta" target="_blank" rel="noopener noreferrer">María Eugenia Costa</a> para el curso <strong>Introduccion Front End</strong> en <img src="../assets/images/ada_logo_blanco.png" alt="Logo de Ada"></p>
   </footer>
-  
 </body>
 </html>
