sigo con la practica de la clase 5

--- a/clase05/card-de-pelicula.html
+++ b/clase05/card-de-pelicula.html
@@ -30,22 +30,19 @@
     <header class="card">
       <h1>Card de pelicula</h1>
     </header>
-    <!--
-Crear una card de película con los siguientes datos: póster de la película, título, descripción, año y género
-Por ejemplo:
-![](https://i.ibb.co/z6hKMWp/Screen-Shot-2020-08-28-at-17-10-56.png)
-- La card debe tener un ancho y un alto fijo.
-- La card debe estar centrada con respecto al ancho y al alto de la pantalla.
-- La imagen debe tener un ancho fijo.
-- El contenedor de la información de la película debe ocupar el ancho disponible (con `flex-grow`) y el 100% del alto de la card.
-- La descripción debe ocupar el alto disponible.
-    -->
   <!-- MAIN -->
   <main id="card-pelicula">
     <section class="card">
-      
+      <section class="card-image">
+        <img src="./img/comer-rezar-amar.jpg" width="300" height="424" alt="pelicula comer, rezar, amar">
+      </section>
+      <section class="card-text">
+        <h2 class="height1">Comer, rezar, amar</h2>
+        <p class="height2">Después de su divorcio, Liz decide rehacer su vida. Así que emprende un viaje por el mundo en busca de buena comida, espiritualidad y amor verdadero.</p>
+        <p class="height1">Protagonistas = Julia Roberts, James Franco, Javier Bardem</p>
+        <p class="height1">2010 - Películas basadas en hechos reales</p>
+      </section>
     </section>
-   
   </main>
   <!-- FOOTER -->
   <footer>
