subo la practica de layout de la calse 5

--- a/clase05/card-de-pelicula.html
+++ b/clase05/card-de-pelicula.html
@@ -11,7 +11,7 @@
   <meta name="theme-color" content="rgb(232, 229, 132)">
   <meta name="twitter:card" content="summary">
   <meta property="og:type" content="website">
-  <meta property="og:title" name="twitter:title" content="Clase 5 | CArd de pelicula">
+  <meta property="og:title" name="twitter:title" content="Clase 5 | Card de pelicula">
   <meta property="og:description" name="twitter:description"
     content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de la quinta clase: card de pelicula">
   <meta property="og:image" name="twitter:image"
@@ -25,7 +25,7 @@
   <!-- CSS por flex-->
   <link rel="stylesheet" href="./css/style.css">
 </head>
-<body id="card-de-pelilcula">
+<body id="card-de-pelicula">
   <!-- HEADER -->
     <header class="card">
       <h1>Card de pelicula</h1>
