--- a/clase05/index.html
+++ b/clase05/index.html
@@ -34,7 +34,7 @@
     <p><a href="./flex-grow.html" target="_blank" rel="noopener noreferrer">Flex - grow</a></p>
     <p><a href="./flex-basis.html" target="_blank" rel="noopener noreferrer">Flex - basis</a></p>
     <p><a href="./card-de-pelicula.html" target="_blank" rel="noopener noreferrer">Card de pelicula</a></p>
-    <p><a href="./layout.html" target="_blank" rel="noopener noreferrer">Layout</a></p>
+    <p><a href="./layoout.html" target="_blank" rel="noopener noreferrer">Layout</a></p>
     <p><a href="./menu-de-opciones.html" target="_blank" rel="noopener noreferrer">Menú de opciones</a></p>
   </main>
   <!-- FOOTER -->
