doy algo de estilos al index de las practicas de la clase 6

--- a/clase06/index.html
+++ b/clase06/index.html
@@ -23,11 +23,12 @@
 </head>
 <body>
    <!-- HEADER -->
-   <header class="header header-clase5">
-    <h1>Bienvenidos a mis practicas</h1>
+   <header class="header header-clase6">
+    <h1>Bienvenidos a mis practicas de la sexta clase</h1>
   </header>
   <!-- MAIN -->
-  <main>
+  <main class="main-clase6">
+    <h2>Seguimos con Flex-Box</h2>
     <p><a href="./primer-practica.html" target="_blank">Primer practica</a></p>
     <p><a href="./segunda-practica.html" target="_blank">Segunda practica</a></p>
   </main>
