agrego el index para la practica 10

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Practicas Front End | Clase 1 , 2 , 3 y 5</title>
+  <title>Practicas Front End | Clase 1, 2 , 3, 5, 7 y 10</title>
   <meta name="description"
   content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML y CSS. Vean la práctica de las tres primeras clases.">
   <link rel="apple-touch-icon" href="https://img.icons8.com/external-becris-lineal-color-becris/64/000000/external-programming-data-science-becris-lineal-color-becris.png">
@@ -41,6 +41,12 @@
     </section>
     <section class="clase5">
       <a href="./clase05/index.html">Clase 5</a>
+    </section>
+    <section class="clase7">
+      <a href="./clase07/index.html">Clase 7</a>
+    </section>
+    <section class="clase10">
+      <a href="./clase10/index.html">Clase 10</a>
     </section>
   </main>
   <!-- FOOTER -->
