--- a/clase10/index.html
+++ b/clase10/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Practicas Front End | Clase 10 | JS</title>
+  <title>Clase 10 | JS</title>
   <meta name="description"
   content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML, CSS y JavaScript. Vean la práctica de la decima clase: JavaScript.">
   <link rel="apple-touch-icon" href="https://img.icons8.com/external-becris-lineal-color-becris/64/000000/external-programming-data-science-becris-lineal-color-becris.png">
   <meta name="theme-color" content="rgb(232, 229, 132)">
   <meta name="twitter:card" content="summary">
   <meta property="og:type" content="website">
-  <meta property="og:title" name="twitter:title" content="Practicas Front End | Clase 10 | JS">
+  <meta property="og:title" name="twitter:title" content="Clase 10 | JS">
   <meta property="og:description" name="twitter:description"
     content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML, CSS y JavaSCript. Vean la práctica de la decima clase: JavaSCript.">
   <meta property="og:image" name="twitter:image"
@@ -20,6 +20,7 @@
     content="https://eugenia1984.github.io/ada-introduccion-frontend/clase10/index.html">
   <!-- CSS GENERAL -->
   <link rel="stylesheet" href="../styles/main.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
    <!-- HEADER -->
@@ -28,7 +29,75 @@
   </header>
   <!-- MAIN -->
   <main class="main-clase10">
-
+    <h2>Empezamos con <img src="https://img.icons8.com/color/48/undefined/javascript--v1.png" alt="icono de javascript"/></h2>
+    <h3>Te detallo las practicas realizadas:</h3>
+    <p>Haciendo click en los botones amarillos podes hacer la prueba del ejercicio que quieras.</p>
+    <ul>
+      <li>
+        <p><strong><a href="./saludos.html" target="_blank">Saludos</a></strong>: Crear un programa que pida al usuario ingresar un nombre y apellido por separado, y luego muestre un mensaje que diga, "Hola {nombre} {apellido}, bienvenida a Ada".</p> 
+      </li>
+      <li>
+        <p><strong>Heladería</strong>: Crear un programa que pida al usuario ingresar, por separado, tres gustos de helado, y luego muestre un mensaje que diga, por ejemplo, "Aquí tiene su helado de chocolate, dulce de leche y menta granizada".</p>
+      </li>
+      <li>
+        <p><strong> Datos personales</strong>:Crear un programa que pida al usuario ingresar, por separado, nombre, apellido, edad, nacionalidad, documento, y muestre luego un mensaje que diga: "Nuevo usuario agregado al sistema:" y liste todos los datos juntos.</p>
+      </li>
+      <li>
+        <p><strong>Lista de reproducción</strong>:Crear un programa que pida al usuario ingresar, por separado, el nombre de una playlist y el título de tres canciones, y al finalizar se muestre un mensaje que diga, p. ej.: "Se ha creado la playlist 'Hits de los 80s' con las canciones 'Africa', 'Maniac', 'Final Countdown'".</p>
+      </li>
+      <li>
+        <p><strong>Dirección completa</strong>: Crear un programa que pida al usuario ingresar, por separado, la calle, el número, el departamento, el código postal, la ciudad y el país, y muestre un mensaje con toda la dirección completa, p.ej.: "La dirección que ha ingresado es: Calle Falsa 123 3C, 1414, CABA, Argentina".</p>
+      </li>
+      <li>
+        <p><strong>Años perro</strong>: Crear un programa que pida ingresar una edad y devuelva el equivalente de esas edad en años perro.</p>
+      </li>
+      <li>
+        <p><strong>Minutos a segundos</strong>:  Crear un programa que pida ingresar una cantidad en minutos mediante un y muestre un mensaje con el resultado de la conversión en segundos.</p>
+      </li>
+      <li>
+        <p><strong>Días a segundos</strong>: Crear un programa que pida ingresar una cantidad de días y muestre un mensaje con el resultado de la conversión en segundos.</p>
+      </li>
+      <li>
+        <p><strong>Kilómetros a millas</strong>: Crear un programa que pida ingresar una cantidad de kilómetros y muestre un mensaje con el resultado de la conversión en millas.</p>
+      </li>
+      <li>
+        <p><strong>Área de un triangulo</strong>: Crear un programa que pida al usuario ingresar el valor de la base y el valor de la altura de un triangulo, calcular su área y mostrarlo en un mensaje.</p>
+      </li>
+      <li>
+        <p><strong>Perímetro de un rectángulo</strong>: Crear un programa que pida al usuario ingresar el valor de la altura y el valor del ancho de un rectángulo, calcular su perímetro y mostrarlo en un mensaje.</p>
+      </li>
+      <li>
+        <p><strong>Porcentaje</strong>: Crear un programa que pida al usuario ingresar un número, y luego el porcentaje que se desea obtener del mismo. Devolver un mensaje muestre el porcentaje de dicho número.</p>
+      </li>
+      <li>
+        <p><strong>Duración vuelo</strong>: Crear un programa que pida al usuario ingresar, por separado, 3 destinos de las escalas de un vuelo, y la duración de cada uno de ellos. Al final debe mostrar un mensaje que liste todas </p>
+      </li>
+      <li>
+        <p><strong>Incremento</strong>: Crear un programa que pida ingresar una número de partida y una cantidad a ir incrementando y mostrar cinco mensajes seguidos que muestren el número del mensaje y el total incrementado hasta el momento (p. ej.: empezando con 5 e incrementando 5, "Incremento 1) Total: 10", "Incremento 2) Total: 15", "Incremento 3) Total: 20", etc.).</p>
+      </li>
+      <li>
+        <p><strong>Celsius a Fahrenheit</strong>: Crear un programa que pida ingresar una cantidad de grados Celsius y muestre un mensaje con el resultado de la conversión a grados Fahrenheit.
+        </p>
+      </li>
+      <li>
+        <p><strong>Múltiplos</strong>: Crear un programa que pida al usuario un número, luego otro y mostrar en un mensaje si el primer valor es múltiplo del segundo. INVESTIGAR EL OPERADOR MÓDULO O DE RESTO % PARA HACERLO</p>
+      </li>
+      <li>
+        <p><strong>Segundos a horas, minutos y segundos</strong>: Crear un programa que pida ingresar una cantidad en segundos y muestre un mensaje con el resultado de la conversión en horas, minutos y segundos que corresponde a esa cantidad (p.ej. 3602 segundos = 1 hora 2 segundos). (Usar operador módulo)</p>
+      </li>
+      <li>
+        <p><strong>Cantidad de caracteres</strong>: Crear un programa que pida al usuario ingresar un texto y muestre un mensaje con la cantidad de caracteres que tiene ese texto. INVESTIGAR CÓMO HACERLO</p>
+      </li>
+      <li>
+        <p><strong>Cantidad de huéspedes</strong>: Crear un programa que pida al usuario ingresar, de a uno por vez, cuántas habitaciones tiene un hotel para 2, 3 y 4 personas, y muestre el máximo de huéspedes que puede albergar.</p>
+      </li>
+      <li>
+        <p><strong>Calculador gastos</strong>: Crear un programa que pida al usuario cuanto dinero disponible tiene, y vaya preguntando cuánto tiene que pagar por cada servicio, pidiendo el nombre del servicio y el monto a pagar, uno a la vez. Cada vez que pide ingresar un nuevo servicio, el mensaje debe mostrar cuántos servicios quedan por ingresar, utilizando una variable, y mostrar cuánto dinero disponible queda. Al final debe mostrar una lista con todos los servicios a pagar y el monto de cada uno, además del dinero disponible que le queda. Hacerlo con 3 servicios.</p>
+      </li>
+      <li>
+        <p><strong>Orden de compras</strong>: Crear un programa que tome la orden de compra de un local. Pedir al usuario que ingrese la cantidad que desea comprar de tres productos distintos, uno por uno, mostrar el valor total de la compra y preguntar en cuántas cuotas desea realizar el pago. Mostrar un mensaje final con el detalle y el valor total la compra, cantidad de cuotas y valor de cada una de las cuotas. Los precios de los productos deben estar definidos de antemano en variables.</p>
+      </li>
+    </ul>
   </main>
 
   <!-- FOOTER -->
