agrego lso ejercicios de la clase 7

--- a/clase07/index.html
+++ b/clase07/index.html
@@ -18,8 +18,12 @@
     content="https://img.icons8.com/ios/50/000000/laptop-coding.png">
   <meta property="og:url" name="twitter:url"
     content="https://eugenia1984.github.io/ada-introduccion-frontend/clase07/index.html">
-  <!-- CSS GENERAL -->
+  <!-- FAVICON -->
+  <link rel="shortcut icon" href="https://img.icons8.com/external-becris-lineal-color-becris/64/000000/external-programming-data-science-becris-lineal-color-becris.png" type="image/x-icon">
+  <!---- CSS GENERAL ---->
   <link rel="stylesheet" href="../styles/main.css">
+  <!---- CSS clase 7 ---->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
    <!-- HEADER -->
@@ -29,6 +33,7 @@
   <!-- MAIN -->
   <main class="main-clase7">
     <h2>Seguimos con Flex-Box</h2>
+    <h3>Hace click en los botones para ver los ejercicios</h3>
     <p><a href="./colores.html" target="_blank">Colores</a></p>
     <p><a href="./header.html" target="_blank">Header</a></p>
     <p><a href="./servicios-1.html" target="_blank">Servicios 1</a></p>
@@ -52,7 +57,6 @@
     <p><a href="./validacion.html" target="_blank">Validar formulario</a></p>
     <p><a href="./overlay.html" target="_blank">Imagen con overlay</a></p>
   </main>
-
   <!-- FOOTER -->
   <footer>
     <p>Practica realizada por <a href="http://www.linkedin.com/in/maríaeugeniacosta" target="_blank" rel="noopener noreferrer">María Eugenia Costa</a> para el curso <strong>Introduccion Front End</strong> en <img src="../assets/images/ada_logo_blanco.png" alt="Logo de Ada"></p>
