agrego el segundo ejercicio de la clase 10

--- a/clase10/index.html
+++ b/clase10/index.html
@@ -37,7 +37,7 @@
         <p><strong><a href="./saludos.html" target="_blank">Saludos</a></strong>: Crear un programa que pida al usuario ingresar un nombre y apellido por separado, y luego muestre un mensaje que diga, "Hola {nombre} {apellido}, bienvenida a Ada".</p> 
       </li>
       <li>
-        <p><strong>Heladería</strong>: Crear un programa que pida al usuario ingresar, por separado, tres gustos de helado, y luego muestre un mensaje que diga, por ejemplo, "Aquí tiene su helado de chocolate, dulce de leche y menta granizada".</p>
+        <p><strong><a href="./heladeria.html" target="_blank">Heladeria</a></strong>: Crear un programa que pida al usuario ingresar, por separado, tres gustos de helado, y luego muestre un mensaje que diga, por ejemplo, "Aquí tiene su helado de chocolate, dulce de leche y menta granizada".</p>
       </li>
       <li>
         <p><strong> Datos personales</strong>:Crear un programa que pida al usuario ingresar, por separado, nombre, apellido, edad, nacionalidad, documento, y muestre luego un mensaje que diga: "Nuevo usuario agregado al sistema:" y liste todos los datos juntos.</p>
